# codesphere

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SETUP.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  setup.sh
backend/ai-ml-service/: Dockerfile  requirements.txt
backend/ai-service/: .env.example  Dockerfile  README.md  requirements.txt
backend/analytics-service/: requirements.txt
backend/api-gateway/: Dockerfile  README.md  package.json
backend/assessment-service/: .env.example  Dockerfile  go.mod  ormconfig.ts  package.json  run-migrations.ts
backend/auth-service/: .env.example  Dockerfile  README.md  generate-keys.sh  ormconfig.ts  package.json
backend/code-execution-service/: Cargo.toml  Dockerfile  README.md
backend/execution-service/: .env.example  Dockerfile  README.md  package.json  tsconfig.json
backend/problem-service/: .env.example  Dockerfile  README.md  go.mod  ormconfig.ts  package.json  run-migrations.ts  tsconfig.json
database/: README.md  init-production.sh  seed-debugging-files.sql
docs/: DEPLOYMENT.md  DEVELOPMENT-ROADMAP.md  FRD - Technical Architecture.md  IMPLEMENTATION_STATUS.md  MVP_PROGRESS_AND_ROADMAP.md  NEXT_ACTIVITIES_PLAN.md  PRD - Candidate Side.md  PRD - Enterprise side.md  PRD_IMPLEMENTATION_STATUS.md  Product_Strategy.md  README.md
frontend/: .env.example  .eslintrc.cjs  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package.json  proxy_params.conf  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: build-runtime-images.sh  smoke-test.sh
(+188 files in other folders)
